--- a/010-daten-aufraeumen.Rmd
+++ b/010-daten-aufraeumen.Rmd
@@ -48,6 +48,125 @@ Häufig sind Daten noch nicht "aufbereitet" und müssen noch "geputzt" oder "auf
 
 Betrachten wir einige zentrale Aspekte dieser Schritte.
 
+
+## Brave Daten
+
+Wie muss eine Tabelle gestaltet sein,
+damit man sie gut in R importieren kann, bzw. gut damit weiterarbeiten kann?
+
+[Das ist eine gute Quelle](https://www.tandfonline.com/doi/full/10.1080/00031305.2017.1375989) zu diesem Thema.
+
+Im Überblick sollten Sie auf Folgendes achten:
+
+- Wenn Sie händisch Daten eintragen, hacken Sie das einfach in Excel sein.
+- CSV-Dateien bieten sich als Datenformat an.
+- Alternativ kann man auch Excel-Dateien in R importieren.
+- Es muss genau eine Kopfzeile geben.
+- Es darf keine Lücken geben (leere Zeilen oder Spalten oder Zellen).
+- Vermeiden Sie Umlaute und Leerzeichen in den Variablennamen.
+
+
+
+Beachten Sie das Prinzip von "tidy data":
+
+- In jeder Zeile steht *eine Beobachtung*.
+- In jeder Spalte steht *eine Variable*.
+- In jeder Zelle steht *eine Wert*.
+
+
+## Text in Zahlen umwandeln
+
+
+Sie haben eine Umfrage durchgeführt, Daten sind erhoben, puh, bald können Sie das Projekt abschließen.
+
+Jetzt haben Sie die Daten in R importiert,
+aber müssen zu Ihrem Schrecken feststellen,
+dass die Spalten (Variablen) die eigentlich Zahlen sein sollten, 
+als `character`, Text also, formatiert sind in R.
+
+Anstelle der Zahl `5` steht in der Spalte also `"5"` (man beachte die Anführungszeichen, die anzeigen, dass es sich um einen Text handelt).
+
+Na toll.
+
+Mit Wörtern (Text) kann man nicht rechnen, und Sie rechnen doch so gern...
+
+R weigert sich standhaft, mit Text zu rechnen:
+
+```{r error = TRUE}
+"5" + "5"
+```
+
+Hätten wir brave Zahlen, wäre alles paletti:
+
+```{r}
+5+5
+```
+
+Der Einfachheit halber erzeugen wir uns eine einfache Tabelle, mit ein paar Spalten,
+die *als Text* formatierte Zahlen enthalten:
+
+```{r}
+library(tidyverse)
+
+d <- tibble(i01 = c("1", "3", "4"),  # von 1 bis 4
+            i02 = c("-2", "+3", "-1"),  # von -3 bis -3
+            i03 = factor(c("-2", "+2", "-1")))  # als Faktorvariable formatiert
+d
+```
+
+Für diejenigen, die kompliziert mögen, ist hier noch eine `factor`-Spalte hinzugefügt. Erstmal ignorieren.
+
+Stellen Sie sich vor, die Tabelle ist ein Auszug aus Ihrer Umfrage,
+wobei `i01` das erste Item (Frage) Ihres Fragebogens darstellt etc.
+
+
+Wie kann man R beibringen, 
+dass die fraglichen Spalte `i01` doch "in Wirklichkeit" Zahlen sind und kein Text?
+
+Welcher R-Befehl hilft hier? Wählen Sie die am besten passende Antwort!
+
+Answerlist
+----------
+* `as.character(i01)`
+* `d %>% mutate(i01 = as.number(i01))`
+* `d %>% mutate(i01 = mach_mir_ne_zahl(i01))`
+* `d %>% mutate(i01 = parse_number(i01))`
+* `d %>% mutate(i01 = as.numeric(i01))`
+
+
+
+Solution
+========
+
+```{r}
+d2 <- 
+  d %>% 
+  mutate(i01 = parse_number(i01))
+d
+```
+
+So würde es *in einigen Fällen* auch gehen:
+
+```{r}
+d %>% mutate(i01_r = as.numeric(i01))
+```
+
+Aber wenn `i01` als `factor()` formatiert ist, dann geht es nicht unbedingt.
+
+```{r}
+d %>% mutate(i02_r = as.numeric(factor(i02)))
+```
+Hoppla! Die Zahlen passen nicht!
+
+`parse_number()` verlangt als Input `character`,
+so dass Sie ggf. noch von `factor` auf `character` umformatieren müssen.
+
+```{r}
+d %>% mutate(i03_r = parse_number(as.character(i03)))
+```
+
+
+
 ## Daten umformen
 
 In einer Fragebogenstudie (oder vergleichbarer Studie) liegen in der Regel pro Respondent (allgemeiner: pro Beobachtung) eine Reihe von Antworten auf Fragebogen-Items vor. 
@@ -113,7 +232,7 @@ extra %>%
 
 
 
-### Vertiefung: Duplikate entfernen
+<!-- ### Vertiefung: Duplikate entfernen -->
 
 
 ## Extraversionsscore berechnen
