--- a/010-daten-aufraeumen.Rmd
+++ b/010-daten-aufraeumen.Rmd
@@ -77,7 +77,9 @@ Beachten Sie das Prinzip von "tidy data":
 ## Text in Zahlen umwandeln
 
 
-Sie haben eine Umfrage durchgeführt, Daten sind erhoben, puh, bald können Sie das Projekt abschließen.
+### Hilfe, ich habe keine Zahlen
+
+Kennen Sie das? Sie haben eine Umfrage durchgeführt, Daten sind erhoben, puh, bald können Sie das Projekt abschließen.
 
 Jetzt haben Sie die Daten in R importiert,
 aber müssen zu Ihrem Schrecken feststellen,
@@ -123,20 +125,12 @@ wobei `i01` das erste Item (Frage) Ihres Fragebogens darstellt etc.
 Wie kann man R beibringen, 
 dass die fraglichen Spalte `i01` doch "in Wirklichkeit" Zahlen sind und kein Text?
 
-Welcher R-Befehl hilft hier? Wählen Sie die am besten passende Antwort!
+Welcher R-Befehl hilft hier? 
 
-Answerlist
-----------
-* `as.character(i01)`
-* `d %>% mutate(i01 = as.number(i01))`
-* `d %>% mutate(i01 = mach_mir_ne_zahl(i01))`
-* `d %>% mutate(i01 = parse_number(i01))`
-* `d %>% mutate(i01 = as.numeric(i01))`
+### Introducing `parse_number()`
 
+`parse_number()` (aus `{tidyverse}`) löst das Problem für Sie:
 
-
-Solution
-========
 
 ```{r}
 d2 <- 
@@ -341,111 +335,6 @@ extra_std %>%
 Mit der letzten Zeile - `filter(...)` haben wir uns das extremste Prozent (hälftig unten und oben) ausgewählt.
 
 
-## Vergleich mit Normierungsstichprobe
-
-
-@Satow2012 berichtet Normierungswerte, leider aber nur für die Allgemeinbevölkerung, 
-nicht heruntergebrochen auf Geschlechter- oder Altersgruppen. Für Extraversion berichtet er folgende Daten:
-
-- Summenscore: 26,67 
-- Standardabweichung: 5,74
-
-
-Auf Errisch:
-
-
-```{r}
-extra_sum_normstipro <- 26.67
-extra_sd_normstipro <- 5.74
-```
-
-
-
-Ob die Daten normal verteilt sind, wird in der Publikation nicht erwähnt. 
-Wir gehen im Folgenden davon aus. Allerdings ist es ein Manko, wenn diese Information nicht gegeben ist. 
-Weiter berichtet @Satow2012 nicht, ob fehlende Werte die Summenscores verringert haben bzw. wie er ggf. mit diesem Problem umgegangen ist. 
-Bevor wir den Vergleich mit der Normierungsstichprobe heranziehen können, müssen wir uns um fehlende Werte kümmern.
-
-
-### Anzahl der fehlenden Werte
-
-
-Eine Möglichkeit, fehlende Werte zu zählen, sieht so aus:
-
-```{r}
-extra %>% 
-  row_count(i01:i10, count = "na") %>% 
-  count(rowcount)
-```
-
-Wir haben Glück; es gibt keine fehlenden Werte in diesem Datensatz. 
-Aber haben wir wirklich Glück? Vermutlich wurden die Respondenten gezwungen, alle Fragen zu beantworten. 
-Vielleicht wurden sie damit ordentlich genervt und haben zur Strafe Blümchen gekreuzt? 
-Wir wissen es nicht genau, sollten aber die Datenqualität noch einmal überprüfen.
-
-
-### Vertiefung: Fehlende Werte ersetzen
-
-Das Ersetzen fehlender Werte ist eine Wissenschaft für sich, aber ein einfacher (alldieweil nicht optimaler) Weg besteht darin, 
-die fehlenden Werte durch den Mittelwert des Items zu ersetzen. 
-Ein Item wurde im Schnitt mit 3,2 beantwortet, aber für Alois fehlt der Wert? 
-Okay, ersetzen wir den fehlenden Wert für dieses Items mit 3,2.
-
-```{r}
-daten <- data_frame(
-  namen = c("Alois", "Bertram", "Zenzi"),
-  i1 = c(1, 1, NA),
-  i2 = c(3, 2, NA),
-  i3 = c(NA, 2, 4)
-)
-
-daten
-```
-
-Für `i1` ist "1" eine plausible Schätzung für den fehlenden Wert, bei `i2` ist "3" sinnvoll und bei `i3` "4", also jeweils der Zeilenmittelwert.
-
-```{r}
-daten_imp <- 
-daten %>% 
-  mice(method = "mean")
-
-daten2 <- complete(daten_imp, 1)
-```
-
-
-Wie wir sehen, wurde in jeder *Spalte* jeder fehlende Wert durch den Spalten-Mittelwert ersetzt.
-
-
-
-### z-Werte auf Basis der Normierungsstichprobe
-
-Im Handbuch sind, wie oben beschrieben, nur Mittelwert und Streuung des *Summen*werts, nicht des *Mittel*werts angegeben, also müssen wir mit diesen Werten arbeiten:
-
-```{r}
-extra <- extra %>% 
-  row_sums(i01:i10, n = .9, var = "extra_sum")
-```
-
-
-Zuerst berechnen wir von Hand den z-Score auf Basis der Normierungsstichprobe:
-
-```{r}
-extra <- extra %>% 
-  mutate(extra_z_normstipro = (extra_sum - extra_sum_normstipro) / extra_sd_normstipro) %>% 
-  mutate(extra_percrank_normstipro = pnorm(extra_z_normstipro)) 
-
-extra %>% 
-  select(extra_z_normstipro, extra_percrank_normstipro) %>% 
-  slice_head(n = 5)
-```
-
-
-### Konfidenzintervalle für den Personenparameter
-
-
-Sicherlich ist unsere Messung der Extraversion nicht perfekt; wir müssen davon ausgehen, dass ein Messfehler vorliegt. Eine Berechnungsvorschrift für den Messfehler sieht so aus [@Buhner2011]:
-
-$$\sigma^2_{E_X} = \sigma^2_X \cdot(1-\rho_{tt})$$
 
 Dabei ist $\sigma^2_{E_X}$ der quadrierte Standardmessfehler, $\sigma^2_X$ die Varianz des Messwerts und $\rho_{tt}$ die Reliabilität des Messwerts. Die Wurzel daraus ist der sog. *Standardmessfehler*:
 
