--- a/040-Fallstudie1.Rmd
+++ b/040-Fallstudie1.Rmd
@@ -4,9 +4,40 @@
 
 
 
-```{r}
-library(tidyverse)
+```{r knitr-setup, echo = FALSE}
+knitr::opts_chunk$set(
+  comment = "#>",
+  collapse = TRUE,
+  message = FALSE,
+  warning = FALSE,
+  cache = TRUE,
+  out.width = "70%",
+  fig.align = 'center',
+  fig.width = 6,
+  fig.asp = 0.618,  # 1 / phi
+  fig.show = "hold",
+  # size = "tiny",
+  tidy.opts=list(width.cutoff = 80) #,
+  # tidy=TRUE
+)
 ```
+
+
+
+## R-Pakete
+
+
+In diesem Kapitel benötigen wir folgende R-Pakete:
+
+
+```{r message=FALSE}
+library(tidyverse)  # Datenjudo
+library(sjmisc)  # Datenhausmeister
+library(janitor)  # Auch ein Hausmeister
+library(easystats)  # Stats made easy :-)
+library(flextable)  # html Tabellen, schick
+```
+
 
 
 ## Einleitung
