--- a/book.bib
+++ b/book.bib
@@ -1,294 +1,92 @@
-@Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {http://yihui.org/knitr/},
-}
 
-@Manual{R-rgl,
-  title = {rgl: 3D Visualization Using OpenGL},
-  author = {Daniel Adler and Duncan Murdoch and {others}},
-  year = {2017},
-  note = {R package version 0.97.0},
-  url = {https://CRAN.R-project.org/package=rgl},
-}
-@Manual{R-rmarkdown,
-  title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman},
-  year = {2016},
-  note = {R package version 1.3},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
-}
-@Manual{R-rgdal,
-  title = {rgdal: Bindings for the Geospatial Data Abstraction Library},
-  author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
-  year = {2016},
-  note = {R package version 1.2-5},
-  url = {https://CRAN.R-project.org/package=rgdal},
-}
-@Manual{R-maptools,
-  title = {maptools: Tools for Reading and Handling Spatial Objects},
-  author = {Roger Bivand and Nicholas Lewin-Koh},
-  year = {2017},
-  note = {R package version 0.9-1},
-  url = {https://CRAN.R-project.org/package=maptools},
-}
-@Article{R-openair,
-  title = {openair --- An R package for air quality data analysis},
-  author = {David C. Carslaw and Karl Ropkins},
-  journal = {Environmental Modelling \& Software},
-  volume = {27--28},
-  number = {0},
-  pages = {52--61},
-  year = {2012},
-  issn = {1364-8152},
-  doi = {10.1016/j.envsoft.2011.09.008},
-}
-@Manual{R-xlsx,
-  title = {xlsx: Read, write, format Excel 2007 and Excel 97/2000/XP/2003 files},
-  author = {Adrian A. Dragulescu},
-  year = {2014},
-  note = {R package version 0.5.7},
-  url = {https://CRAN.R-project.org/package=xlsx},
-}
-@Manual{R-ReporteRs,
-  title = {ReporteRs: Microsoft Word and PowerPoint Documents Generation},
-  author = {David Gohel},
-  year = {2017},
-  note = {R package version 0.8.8},
-  url = {https://CRAN.R-project.org/package=ReporteRs},
-}
-@Article{R-plotrix,
-  year = {2006},
-  title = {Plotrix: a package in the red light district of R},
-  journal = {R-News},
-  volume = {6},
-  number = {4},
-  pages = {8-12},
-  author = {Lemon J},
-}
-@Manual{R-leafletCN,
-  title = {leafletCN: An R Gallery for China and Other Geojson Choropleth Map in
-Leaflet},
-  author = {Dawei Lang},
-  year = {2017},
-  note = {R package version 0.2.1},
-  url = {https://CRAN.R-project.org/package=leafletCN},
-}
-@Article{R-simecol,
-  title = {simecol: An Object-Oriented Framework for Ecological Modeling in R},
-  author = {Thomas Petzoldt and Karsten Rinke},
-  journal = {Journal of Statistical Software},
-  volume = {22},
-  number = {9},
-  pages = {1--31},
-  year = {2007},
-  coden = {JSSOBK},
-  issn = {1548-7660},
-  url = {http://www.jstatsoft.org/v22/i09},
-  keywords = {ecological modeling, individual-based model,
-               object-oriented programming (OOP),
-               code-sharing, R.},
-}
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2016},
-  url = {https://www.R-project.org/},
-}
-@Book{R-lattice,
-  title = {Lattice: Multivariate Data Visualization with R},
-  author = {Deepayan Sarkar},
-  publisher = {Springer},
-  address = {New York},
-  year = {2008},
-  note = {ISBN 978-0-387-75968-5},
-  url = {http://lmdvr.r-forge.r-project.org},
-}
-@Manual{R-timeDate,---
-title: "Untitled"
-output: html_document
-date: '2022-05-25'
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
-  title = {timeDate: Rmetrics - Chronological and Calendar Objects},
-  author = {Rmetrics Core Team and Diethelm Wuertz and Tobias Setz and Yohan Chalabi and Martin Maechler and Joe W. Byers},
-  year = {2015},
-  note = {R package version 3012.100},
-  url = {https://CRAN.R-project.org/package=timeDate},
-}
-@Book{R-ggplot2,
-  author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
-  publisher = {Springer-Verlag New York},
-  year = {2009},
-  isbn = {978-0-387-98140-6},
-  url = {http://ggplot2.org},
-}
-@Manual{R-stringr,
-  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
-  author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.0},
-  url = {https://CRAN.R-project.org/package=stringr},
-}
-
-@Book{xie2014,
-  title =     {knitr: A Comprehensive Tool for Reproducible Research in {R}},
-  publisher = {Chapman and Hall/CRC},
-  year =      {2014},
-  author =    {Yihui Xie},
-  editor =    {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-  note =      {ISBN 978-1466561595},
-  booktitle = {Implementing Reproducible Computational Research},
-  url =       {http://www.crcpress.com/product/isbn/9781466561595}
-}@Article{R-animation1,
-  title = {{animation}: An {R} Package for Creating Animations and Demonstrating Statistical Methods},
-  author = {Yihui Xie},
-  journal = {Journal of Statistical Software},
-  year = {2013},
-  volume = {53},
-  number = {1},
-  pages = {1--27},
-  url = {http://www.jstatsoft.org/v53/i01/},
-}
-
-@Book{xie2015,
-  title =     {Dynamic Documents with {R} and knitr},
-  publisher = {Chapman and Hall/CRC},
-  year =      {2015},
-  author =    {Yihui Xie},
-  address =   {Boca Raton, Florida},
-  edition =   {2nd},
-  note =      {ISBN 978-1498716963},
-  owner =     {Peng Zhao},
-  timestamp = {2017.06.22},
-  url =       {http://yihui.name/knitr/}
-}
-
-@Book{R-bookdown,
-  title =     {bookdown: Authoring Books and Technical Documents with {R} Markdown},
-  publisher = {Chapman and Hall/CRC},
-  year =      {2016},
-  author =    {Yihui Xie},
-  address =   {Boca Raton, Florida},
-  note =      {ISBN 978-1138700109},
-  url =       {https://github.com/rstudio/bookdown}
-}
-@Manual{R-bookdown1,
-  title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-  author = {Yihui Xie},
-  year = {2016},
-  note = {R package version 0.3.10},
-  url = {https://github.com/rstudio/bookdown},
-}
-@Manual{R-knitr1,
-  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
-  author = {Yihui Xie},
-  year = {2016},
-  note = {R package version 1.15.1},
-  url = {http://yihui.name/knitr/},
-}
-@Manual{R-blogdown,
-  title = {blogdown: Create Blogs and Websites with R Markdown},
-  author = {Yihui Xie},
-  year = {2017},
-  note = {R package version 0.0.24},
-  url = {https://github.com/rstudio/blogdown},
-}
-
-@Manual{R-animation2,
-  title = {animation: A Gallery of Animations in Statistics and Utilities to Create
-Animations},
-  author = {Yihui Xie and Christian Mueller and Lijia Yu and Weicheng Zhu},
-  year = {2015},
-  note = {R package version 2.4},
-  url = {http://yihui.name/animation},
-}
-@Manual{R-fun,
-  title = {fun: Use R for Fun},
-  author = {Yihui Xie and Taiyun Wei and Yixuan Qiu},
-  year = {2011},
-  note = {R package version 0.1-0},
-  url = {https://CRAN.R-project.org/package=fun},
-}
-@Manual{R-fortunes,
-  title = {fortunes: R Fortunes},
-  author = {Achim Zeileis and the R community. Contributions (fortunes and/or code) by Torsten Hothorn and Peter Dalgaard and Uwe Ligges and Kevin Wright and Martin Maechler and Kjetil Brinchmann Halvorsen and Kurt Hornik and Duncan Murdoch and Andy Bunn and Ray Brownrigg and Roger Bivand and Spencer Graves and Jim Lemon and Christian Kleiber and David L. Reiner and Berton Gunter and Roger Koenker and Charles Berry and Marc Schwartz and Michael Dewey and Ben Bolker and Peter Dunn and Sarah Goslee and Simon Blomberg and Bill Venables and Roland Rau and Thomas Petzoldt and Rolf Turner and Mark Leeds and Emmanuel Charpentier and Chris Evans and Paolo Sonego and Peter Ehlers and Detlef Steuer and Tal Galili and Greg Snow and Brian D. Ripley and Michael Sumner and David Winsemius and Liviu Andronic and Brian Diggs and Matthieu Stigler and Michael Friendly and Dirk Eddelbuettel and Richard M. Heiberger and Patrick Burns and Dieter Menne and Andrie {de Vries} and Barry Rowlingson and Renaud Lancelot and R. Michael Weylandt and Jon Olav Skoien and Francois Morneau and Antony Unwin and Joshua Wiley and Terry Therneau and Bryan Hanson and Henrik Singmann and Eduard Szoecs and Gregor Passolt and John C. Nash.},
-  year = {2016},
-  note = {R package version 1.5-4},
-  url = {https://CRAN.R-project.org/package=fortunes},
-}
-
-@Manual{R-bookdownplus,
-  title =     {bookdownplus: Generate Varied Books and Documents with R 'bookdown' Package},
-  author =    {Peng Zhao},
-  year =      {2017},
-  note =      {R package version 1.0.2},
-  owner =     {Peng Zhao},
-  timestamp = {2017.06.22},
-  url =       {https://CRAN.R-project.org/package=bookdownplus}
-}
-
-@Manual{R-mindr,
-  title =     {mindr: Convert Files Between Markdown or Rmarkdown Files and Mindmaps},
-  author =    {Peng Zhao},
-  year =      {2017},
-  note =      {R package version 1.0.4},
-  owner =     {Peng Zhao},
-  timestamp = {2017.06.22},
-  url =       {https://github.com/pzhaonet/mindr}
-}
-
-@Manual{R-pinyin,
-  title =     {pinyin: Convert Chinese Characters into Pinyin},
-  author =    {Peng Zhao},
-  year =      {2017},
-  note =      {R package version 1.0.2},
-  owner =     {Peng Zhao},
-  timestamp = {2017.06.22},
-  url =       {https://github.com/pzhaonet/pinyin}
-}
-
-@Manual{R-postr,
-  title =     {postr: Generage posters with r markdown},
-  author =    {Peng Zhao},
-  year =      {2017},
-  note =      {R package version 0.0.0},
-  owner =     {Peng Zhao},
-  timestamp = {2017.06.22},
-  url =       {https://github.com/pzhaonet/postr}
+@book{Steyer1993,
+	location = {Heidelberg},
+	title = {Messen Und Testen},
+	isbn = {3-540-56169-2},
+	publisher = {Springer},
+	author = {Steyer, Rolf and Eid, Michael},
+	date = {1993}
 }
 
 
 
+@book{Lienert1998,
+	location = {Weinheim},
+	edition = {6. Auflage},
+	title = {Testaufbau und Testanalyse},
+	isbn = {978-3-621-27845-4 978-3-621-27424-1},
+	abstract = {Der " Lienert" ist seit Jahrzehnten das Standardwerk zur Entwicklung, Anwendung und Interpretation von psychologischen Tests. Wer auf der Grundlage der klassischen Testtheorie psychologische Tests erstellen will, findet hier die einzelnen Schritte bei der Testentwicklung ausführlich dargestellt und an Beispielen erläutert." Testaufbau und Testanalyse" ist ein profundes und zuverlässiges Lehrbuch und ein unverzichtbares Arbeits- und Nachschlagewerk für diagnostisch arbeitende Psychologen, Pädagogen, Mediziner und andere. Aus Rezensionen der früheren Auflage:" Der Leserkreis umfasst jeden, der sich mit der Psychodiagnostik auf wissenschaftlicher Basis auseinander zu setzen hat, gleichgültig ob in praktischer, lernender oder lehrender Tätigkeit." Schweizer Zeitschrift für Psychologie" Ein Lehrbuch, das in seiner Klarheit, Systematik und Anschaulichkeit mustergültig ist. Jeder Schritt der Testentwicklung wird an einem Demonstrationsbeispiel erläutert, jede wichtige Formel wird in einem Rechenbeispiel in ihrer praktischen Anwendung demonstriert, und viele Abbildungen und Schemata veranschaulichen die Darlegungen." Diagnostica},
+	pagetotal = {432},
+	publisher = {Beltz, Psychologie Verlags Union},
+	author = {Lienert, Gustav A. and Raatz, Ulrich},
+	date = {1998},
+	file = {Lienert&Raatz_(1998)Testaufbau und Testanalyse.pdf:/Users/sebastiansaueruser/Literatur/Lienert&Raatz_(1998)Testaufbau und Testanalyse.pdf:application/pdf}
+}
+
+
+
+@book{Sauer2019,
+	location = {Wiesbaden},
+	edition = {1. Auflage 2019},
+	title = {Moderne Datenanalyse mit R: Daten einlesen, aufbereiten, visualisieren und modellieren},
+	rights = {All rights reserved},
+	isbn = {978-3-658-21587-3 978-3-658-21586-6},
+	url = {https://www.springer.com/de/book/9783658215866},
+	series = {{FOM}-Edition},
+	shorttitle = {Moderne Datenanalyse mit R},
+	publisher = {Springer},
+	author = {Sauer, Sebastian},
+	date = {2019},
+	keywords = {modar}
+}
+
+
+
+
+@book{Buhner2011,
+	location = {Hallbergmoos},
+	title = {Einführung in die Test- und Fragebogenkonstruktion},
+	isbn = {978-3-86894-033-6},
+	url = {https://books.google.de/books?id=Y4990CfV3wgC},
+	series = {{PS} Psychologie},
+	publisher = {Pearson Studium},
+	author = {Bühner, M},
+	date = {2011}
+}
+
+
+
+
+@article{satow_b5t_2020,
+	title = {B5T®. Big-Five-Persönlichkeitstest},
+	rights = {{CC}-{BY}-{NC}-{ND} 3.0, {openAccess},},
+	url = {https://www.psycharchives.org/handle/20.500.12034/423.3},
+	doi = {10.23668/PSYCHARCHIVES.4611},
+	abstract = {The B5T® Big Five personality test measures the five basic personality dimensions neuroticism (N), extraversion (E), conscientiousness (C), agreeableness (A) and openness (O) as well as the three basic motives achievement motive ({LM}), power motive ({MM}) and security motive ({SM}). There are a total of 72 items. Reliability: The reliability of the scales ranges between Cronbach's alpha = .76 and alpha = .90. Validity: The factorial validity could be confirmed in several large samples. In addition, significant correlations with education, occupation, and income were found. Further evidence is provided by more than 100 bachelor's and master's theses that have been written since the test was published. Norms: The test was re-normed in 2020 using a large representative sample (n = 14383). Norms by gender and age groups are available.},
+	author = {Satow, L.},
+	editora = {Leibniz Institut Für Psychologie ({ZPID}) and Leibniz Institut Für Psychologie ({ZPID})},
+	editoratype = {collaborator},
+	urldate = {2022-05-25},
+	date = {2020},
+	langid = {german},
+	note = {Publisher: {ZPID} (Leibniz Institute for Psychology) – Open Test Archive},
+	keywords = {Questionnaires, 150, Adolescence, Adulthood, Classical Test Theory, Erwachsenenalter, Fragebögen, Jugendalter, Klassische Testtheorie, Rating Scales, Rating-Skalen, Aufgeschlossenheit, Computer Assisted Testing, Computerunterstütztes Testen, Ernsthaftigkeit (Persönlichkeit), Extraversion, Five Factor Personality Model, Fünffaktorenmodell der Persönlichkeit, Interpersonal Compatibility, Interpersonale Verträglichkeit, Neuroticism, Neurotizismus, Openmindedness, Personality Measures, Persönlichkeitstests, Screening Tests, Seriousness}
+}
+
+
+
+@article{Satow2012,
+	title = {{SCI} - Stress- und Coping-Inventar},
+	rights = {{CC}-{BY}-{NC}-{ND} 3.0, {openAccess},},
+	url = {https://www.psycharchives.org/handle/20.500.12034/437.2},
+	doi = {10.23668/PSYCHARCHIVES.4604},
+	abstract = {The {SCI} is used to determine the current stress load and stress symptoms and to illustrate how to deal with stress using five coping strategies. It comprises 10 scales with 54 items: (A) Current stress load (1) Stress due to uncertainty, (2) Stress due to overload, (3) Stress due to loss and actual negative events, (4) Total stress: Total stress due to insecurity, threat, overload or loss in important areas of life, (5) Physical and psychological stress symptoms; (B) Stress coping (Coping) (1) Positive thinking, (2) Active stress coping, (3) Social support, (4) Keeping faith, (5) Increased alcohol and cigarette consumption. Reliability: Cronbach's alpha of the subscales varies between alpha = .69 and alpha = .88. Validity: The factorial structure was confirmed on the norming sample (N = 5 520). Furthermore, significant correlations with stress symptoms were found, as well as a reduction of stress symptoms by adaptive coping strategies, as expected. norms: Gender-specific norms are available for four age groups.},
+	author = {Satow, L.},
+	editora = {Leibniz Institut Für Psychologie ({ZPID}) and Leibniz Institut Für Psychologie ({ZPID})},
+	editoratype = {collaborator},
+	urldate = {2022-05-25},
+	date = {2012},
+	langid = {german},
+	note = {Publisher: {ZPID} (Leibniz Institute for Psychology) – Open Test Archive},
+	keywords = {150, Adolescence, Adulthood, Bewältigungsverhalten, Classical Test Theory, Clinical Psychology, Coping Behavior, Erwachsenenalter, Fragebögen, Jugendalter, Klassische Testtheorie, Klinische Psychologie, Questionnaires, Rating Scales, Rating-Skalen, Stress, Stress Management, Stress Reactions, Stressreaktionen, Stressverarbeitung, Test Norms, Testnormen}
+}
