--- a/index.Rmd
+++ b/index.Rmd
@@ -41,6 +41,12 @@ knitr::opts_chunk$set(
 
 
 
+
+```{r echo = FALSE, out.width="100%", fig.cap = "Lustige Tierchen, buntes Treiben: Willkommen beim Auswerten von Umfragedaten"}
+knitr::include_graphics("img/IMG_0788.JPG")
+```
+
+
 Fragebogendaten zu psychologischen Variablen (wie z.B. Extraversion), die wissenschaftlichen Ansprüchen genügen, bezeichnet man als *psychometrische Daten* [vgl. @Steyer1993]. 
 Der Analyse psychometrischer Daten kommt große Bedeutung innerhalb der Psychologie (und angrenzender Gebiete wie Marketing) zu. 
 Der Grund ist, dass Daten häufig in Form von Fragebogen, psychometrischer Fragebogen, erhoben werden. 
