--- a/book.bib
+++ b/book.bib
@@ -90,3 +90,15 @@
 	note = {Publisher: {ZPID} (Leibniz Institute for Psychology) – Open Test Archive},
 	keywords = {150, Adolescence, Adulthood, Bewältigungsverhalten, Classical Test Theory, Clinical Psychology, Coping Behavior, Erwachsenenalter, Fragebögen, Jugendalter, Klassische Testtheorie, Klinische Psychologie, Questionnaires, Rating Scales, Rating-Skalen, Stress, Stress Management, Stress Reactions, Stressreaktionen, Stressverarbeitung, Test Norms, Testnormen}
 }
+
+
+
+
+@book{mair_modern_2018,
+	location = {New York, {NY}},
+	title = {Modern psychometrics with R},
+	isbn = {978-3-319-93175-3},
+	publisher = {Springer Science+Business Media},
+	author = {Mair, Patrick},
+	date = {2018}
+}
