--- a/070-Fallstudie-Normierung.Rmd
+++ b/070-Fallstudie-Normierung.Rmd
@@ -5,6 +5,11 @@
 library(tidyverse)
 library(DataExplorer)
 library(easystats)
+```
+
+
+
+```{r include=FALSE}
 library(knitr)   # für "kable", erstellt HTML-Tabellen
 ```
 
@@ -37,11 +42,13 @@ extra %>%
 
 ### Hilfsfunktionen
 
-Zwei Hilfskräfte: Die erste Funktion berechnet Normwerte, s.[Infos here](https://de.wikipedia.org/wiki/Normwertskala):
+Zwei Hilfskräfte (in Form von R-Funktionen) brauchen wir: Die erste Funktion berechnet Normwerte, s.[Infos here](https://de.wikipedia.org/wiki/Normwertskala):
 
 ```{r}
-convert_to_norm_value <- function(score, data_vec, mu = 0, sigma = 1) {
-  out <- ((score - mean(data_vec, na.rm = TRUE)) / sd(data_vec)) * sigma + mu
+convert_to_norm_value <- 
+  function(score, data_vec, mu = 0, sigma = 1) {
+  numerator <- (score - mean(data_vec, na.rm = TRUE))
+  out <-  (numerator / sd(data_vec)) * sigma + mu
   return(out)
 }
 ```
@@ -59,8 +66,6 @@ extra %>%
   
 convert_to_norm_value(score = 3, data_vec = extra_drop_na$extra_mean)
 ```
-```
-
 
 
 Diese Funktion wenden wir für mehrere Normierungsarten an, im Rahmen einer zweiten Funktion:
@@ -98,6 +103,7 @@ compute_all_norms <- function(x, min_score = 0, max_score = max(x), by = .5){
 ```{r norms-overall, results = "asis"}
 extra %>% 
   select(ends_with("_mean")) %>% 
+  drop_na() %>% 
   map(~ kable(compute_all_norms(., min_score = 1, max_score = 4, by = .1), 
                      digits = 2)) %>% 
   print()
